# Stream-Pad

./: .gitignore  .prettierignore  LICENSE  PRIVACY.md  README.md  THIRD_PARTY_NOTICES.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
installer-bootstrapper/: Cargo.toml  build.rs  installer.rc
installer-bootstrapper/src/: main.rs
releases/latest/download/: latest.json
scripts/: build-bundle-tools.ps1
src/: App.tsx  main.tsx  types.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/installer/: app-logo-160.bgra  nsis-hooks.nsh
src-tauri/src/: lib.rs  main.rs
src/components/: CustomTitleBar.tsx
src/components/deck/: ButtonIcon.tsx  DeckPanel.tsx  SortableDeckButton.tsx
src/components/drawer/: AppDrawer.tsx
src/components/feedback/: ErrorBanner.tsx
src/components/inspector/: ButtonInspector.tsx
src/components/modals/: ConfirmDeleteModal.tsx  EditProfileModal.tsx  IconPickerModal.tsx  NewProfileModal.tsx
src/components/profiles/: ProfileDropdown.tsx  SortableProfileOption.tsx
src/components/states/: EmprtyState.tsx  ErrorState.tsx  LoadingState.tsx
src/components/tray/: TrayMenu.tsx
src/config/: appConfig.ts
src/constants/: icons.ts
src/domain/: deck.ts
src/hooks/: useDeckConfig.ts  useTheme.ts
src/services/: deckActionService.ts  deckConfigService.ts  deckImportService.ts
src/styles/: base.css  components.css  drawer.css  index.css  layout.css  modals.css  profiles.css  tray.css  variables.css
src/utils/: dropImport.ts  getErrorMessage.ts  logger.ts  validation.ts
~/.tauri/: UPDATES.txt  myapp.key  myapp.key.pub  streamdeck.key  streamdeck.key.pub
