[package]
name = "stream_pad_installer"
version = "0.1.22"
edition = "2021"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
winreg = "0.55.0"
windows = { version = "0.61.3", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Storage_FileSystem",
  "Win32_System_LibraryLoader",
  "Win32_System_Registry",
  "Win32_System_Threading",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
embed-resource = "3.0.9"
